2021-12-03
+ MAJOR
  - Provisional update for Endwalker
  - Viera Male models/textures/etc now viewable/editable.
  
+ KNOWN ISSUES 
  - The Companion section is broken.
  - Metadata settings needs updating for Viera Male
  - FMV and racial scaling needs updating for Viera Male.

+ NOTE
  - This is a temporary initial pre-patch for Endwalker.  More updates will come over this week to bring functionality back to normal.  Mods may or may not currently break the game as we cannot test them yet.

2021-08-14
+ MINOR
  - Updated offsets for Chinese FFXIV version 5.5.

2021-08-03
+ MAJOR
  - A new type of modpack, the backup modpack, has been added. 
     - This modpack allows you to restore your mod list to the same state as when it was created instead of all your mods getting listed under one backup pack. You can create a backup modpack by clicking Mods -> Create Modpack -> Backup Modpack.

+ MINOR
  - You can now opt out of the default model import settings such as Force UV1 to [-1, 1] for gear or User Original Shape Data for faces. TexTools will remember when you check or uncheck the previously always checked boxes.

+ BUGFIXES
  - Fixed a bug where parts of a model were invisible in the model preview under certain conditions.
  - Fixed an error when attempting to import a model containing non sequential mesh numbers.
  - Fixed a bug where an incorrect LoD count was written to the MDL file during model import.

2021-05-18
+ MINOR
  - KR Offsets updated to patch 5.4 Offsets
     - Note - KR Users will need to rebuild their TexTools cache to see correct item names via Help -> Cache operations -> Rebuild Cache
+ BUGFIXES
  - Resolved an issue wherein the Company Chocobo and other Demihuman mounts would not show up correctly when selected from the categories listing.
  - Resolved an issue wherein the Loading Screen textures could not be opened in TexTools.

2021-05-04
+ MINOR